// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`development 1`] = `
{
  "devServer": {
    "compress": true,
    "devMiddleware": {
      "publicPath": "https://localhost:8080/dist/",
      "writeToDisk": [Function],
    },
    "headers": {
      "Access-Control-Allow-Origin": "*",
    },
    "host": "<VERSION>.0",
    "port": 8080,
    "server": "https",
  },
  "devtool": "cheap-module-source-map",
  "module": {
    "rules": [
      {
        "exclude": /node_modules/,
        "loader": "babel-loader",
        "test": /\\\\\\.jsx\\?\\$/,
      },
      {
        "test": /\\\\\\.css\\$/,
        "use": [
          "<PROJECT_ROOT>/node_modules/mini-css-extract-plugin/dist/loader.js",
          {
            "loader": "css-loader",
            "options": {
              "importLoaders": 1,
              "sourceMap": true,
              "url": false,
            },
          },
          {
            "loader": "postcss-loader",
            "options": {
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "test": /\\\\\\.s\\(c\\|a\\)ss\\$/,
        "use": [
          "<PROJECT_ROOT>/node_modules/mini-css-extract-plugin/dist/loader.js",
          {
            "loader": "css-loader",
            "options": {
              "importLoaders": 2,
              "sourceMap": true,
              "url": {
                "filter": [Function],
              },
            },
          },
          {
            "loader": "postcss-loader",
            "options": {
              "sourceMap": true,
            },
          },
          {
            "loader": "sass-loader",
            "options": {
              "implementation": {
                "AsyncCompiler": [Function],
                "CalculationInterpolation": [Function],
                "CalculationOperation": [Function],
                "Compiler": [Function],
                "Exception": [Function],
                "FALSE": SassBoolean0 {
                  "value": false,
                },
                "Logger": {
                  "silent": {
                    "debug": [Function],
                    "warn": [Function],
                  },
                },
                "NULL": _SassNull0 {},
                "NodePackageImporter": [Function],
                "SassArgumentList": [Function],
                "SassBoolean": [Function],
                "SassCalculation": [Function],
                "SassColor": [Function],
                "SassFunction": [Function],
                "SassList": [Function],
                "SassMap": [Function],
                "SassMixin": [Function],
                "SassNumber": [Function],
                "SassString": [Function],
                "TRUE": SassBoolean0 {
                  "value": true,
                },
                "Value": [Function],
                "Version": [Function],
                "cli_pkg_main_0_": [Function],
                "compile": [Function],
                "compileAsync": [Function],
                "compileString": [Function],
                "compileStringAsync": [Function],
                "deprecations": {
                  "abs-percent": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 65,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "description": "Passing percentages to the Sass abs() function.",
                    "id": "abs-percent",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "bogus-combinators": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 54,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "description": "Leading, trailing, and repeated combinators.",
                    "id": "bogus-combinators",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "call-string": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 0,
                      "minor": 0,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "description": "Passing a string directly to meta.call().",
                    "id": "call-string",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "color-4-api": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 79,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "description": "Certain uses of built-in sass:color functions.",
                    "id": "color-4-api",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "color-functions": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 79,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "description": "Using global color functions instead of sass:color.",
                    "id": "color-functions",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "color-module-compat": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 23,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "description": "Using color module functions in place of plain CSS functions.",
                    "id": "color-module-compat",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "compile-string-relative-url": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 88,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "description": "Passing a relative url to compileString().",
                    "id": "compile-string-relative-url",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "css-function-mixin": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 76,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "description": "Function and mixin names beginning with --.",
                    "id": "css-function-mixin",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "duplicate-var-flags": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 62,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "description": "Using !default or !global multiple times for one variable.",
                    "id": "duplicate-var-flags",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "elseif": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 3,
                      "patch": 2,
                      "preRelease": [],
                    },
                    "description": "@elseif.",
                    "id": "elseif",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "feature-exists": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 78,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "description": "meta.feature-exists",
                    "id": "feature-exists",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "fs-importer-cwd": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 73,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "description": "Using the current working directory as an implicit load path.",
                    "id": "fs-importer-cwd",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "function-units": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 56,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "description": "Passing invalid units to built-in functions.",
                    "id": "function-units",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "global-builtin": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 80,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "description": "Global built-in functions that are available in sass: modules.",
                    "id": "global-builtin",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "if-function": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 95,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "description": "The Sass if($condition, $if-true, $if-false) function.",
                    "id": "if-function",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "import": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 80,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "description": "@import rules.",
                    "id": "import",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "legacy-js-api": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 79,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "description": "Legacy JS API.",
                    "id": "legacy-js-api",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "misplaced-rest": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 91,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "description": "A rest parameter before a positional or named parameter.",
                    "id": "misplaced-rest",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "mixed-decls": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 77,
                      "patch": 7,
                      "preRelease": [],
                    },
                    "description": "Declarations after or between nested rules.",
                    "id": "mixed-decls",
                    "obsoleteIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 92,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "status": "obsolete",
                  },
                  "moz-document": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 7,
                      "patch": 2,
                      "preRelease": [],
                    },
                    "description": "@-moz-document.",
                    "id": "moz-document",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "new-global": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 17,
                      "patch": 2,
                      "preRelease": [],
                    },
                    "description": "Declaring new variables with !global.",
                    "id": "new-global",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "null-alpha": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 62,
                      "patch": 3,
                      "preRelease": [],
                    },
                    "description": "Passing null as alpha in the JS API.",
                    "id": "null-alpha",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "relative-canonical": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 14,
                      "patch": 2,
                      "preRelease": [],
                    },
                    "description": "Imports using relative canonical URLs.",
                    "id": "relative-canonical",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "slash-div": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 33,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "description": "/ operator for division.",
                    "id": "slash-div",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "strict-unary": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 55,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "description": "Ambiguous + and - operators.",
                    "id": "strict-unary",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "type-function": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 86,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "description": "Functions named "type".",
                    "id": "type-function",
                    "obsoleteIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 92,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "status": "obsolete",
                  },
                  "user-authored": {
                    "deprecatedIn": null,
                    "description": null,
                    "id": "user-authored",
                    "obsoleteIn": null,
                    "status": "user",
                  },
                  "with-private": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 92,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "description": "Configuring private variables in @use, @forward, or load-css().",
                    "id": "with-private",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                },
                "info": "dart-sass	<VERSION>	(Sass Compiler)	[Dart]
dart2js	<VERSION>	(Dart Compiler)	[Dart]",
                "initAsyncCompiler": [Function],
                "initCompiler": [Function],
                "load": [Function],
                "loadParserExports_": [Function],
                "render": [Function],
                "renderSync": [Function],
                "sassFalse": SassBoolean0 {
                  "value": false,
                },
                "sassNull": _SassNull0 {},
                "sassTrue": SassBoolean0 {
                  "value": true,
                },
                "types": {
                  "Boolean": [Function],
                  "Color": [Function],
                  "Error": [Function],
                  "List": [Function],
                  "Map": [Function],
                  "Null": [Function],
                  "Number": [Function],
                  "String": [Function],
                },
              },
              "sassOptions": {
                "fiber": false,
              },
            },
          },
        ],
      },
      {
        "test": /\\\\\\.\\(svg\\|png\\|jpg\\|gif\\)\\$/i,
        "type": "asset",
      },
    ],
  },
  "optimization": {
    "minimizer": [
      CssMinimizerPlugin {
        "options": {
          "exclude": undefined,
          "include": undefined,
          "minimizer": {
            "implementation": [Function],
            "options": {},
          },
          "parallel": true,
          "test": /\\\\\\.css\\(\\\\\\?\\.\\*\\)\\?\\$/i,
          "warningsFilter": [Function],
        },
      },
      TerserPlugin {
        "options": {
          "exclude": undefined,
          "extractComments": true,
          "include": undefined,
          "minimizer": {
            "implementation": [Function],
            "options": {
              "output": {
                "comments": false,
              },
            },
          },
          "parallel": true,
          "test": /\\\\\\.\\[cm\\]\\?js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
        },
      },
    ],
    "runtimeChunk": "single",
    "splitChunks": {
      "chunks": "all",
    },
  },
  "output": {
    "assetModuleFilename": "assets/[hash][ext][query]",
    "filename": "[name].js",
    "hashDigestLength": 8,
    "path": "<PROJECT_ROOT>/dist",
    "publicPath": "/dist/",
  },
  "plugins": [
    MiniCssExtractPlugin {
      "_sortedModulesCache": WeakMap {},
      "options": {
        "chunkFilename": "[name].css",
        "experimentalUseImportModule": undefined,
        "filename": "[name].css",
        "ignoreOrder": false,
        "runtime": true,
      },
      "runtimeOptions": {
        "attributes": undefined,
        "insert": undefined,
        "linkType": "text/css",
      },
    },
    ChunksWebpackPlugin {
      "addAssets": [Function],
      "manifest": {},
      "options": {
        "customFormatTags": false,
        "filename": "[name]-[type].html",
        "generateChunksFiles": false,
        "generateChunksManifest": true,
        "outputPath": null,
        "templateScript": "<script src="{{chunk}}"></script>",
        "templateStyle": "<link rel="stylesheet" href="{{chunk}}" />",
      },
    },
    CleanWebpackPlugin {
      "apply": [Function],
      "cleanAfterEveryBuildPatterns": [],
      "cleanOnceBeforeBuildPatterns": [
        "**/*",
      ],
      "cleanStaleWebpackAssets": true,
      "currentAssets": [],
      "dangerouslyAllowCleanPatternsOutsideProject": false,
      "dry": false,
      "handleDone": [Function],
      "handleInitial": [Function],
      "initialClean": false,
      "outputPath": "",
      "protectWebpackAssets": true,
      "removeFiles": [Function],
      "verbose": false,
    },
    WebpackRemoveEmptyScriptsPlugin {
      "apply": [Function],
      "enabled": true,
      "options": {
        "enabled": true,
        "extensions": /\\.\\(css\\|scss\\|sass\\|less\\|styl\\)\\(\\[\\?\\]\\.\\*\\)\\?\\$/,
        "ignore": [],
        "remove": /\\\\\\.\\(js\\|mjs\\)\\$/,
        "stage": 100,
        "verbose": true,
      },
      "outputPath": "",
      "trash": [],
      "verbose": true,
    },
  ],
  "resolve": {
    "extensions": [
      ".wasm",
      ".mjs",
      ".js",
      ".json",
      ".jsx",
    ],
    "plugins": [],
  },
  "stats": "errors-warnings",
}
`;

exports[`production 1`] = `
{
  "devServer": {
    "compress": true,
    "devMiddleware": {
      "publicPath": "https://localhost:8080/dist/",
      "writeToDisk": [Function],
    },
    "headers": {
      "Access-Control-Allow-Origin": "*",
    },
    "host": "<VERSION>.0",
    "port": 8080,
    "server": "https",
  },
  "devtool": false,
  "module": {
    "rules": [
      {
        "exclude": /node_modules/,
        "loader": "babel-loader",
        "test": /\\\\\\.jsx\\?\\$/,
      },
      {
        "test": /\\\\\\.css\\$/,
        "use": [
          "<PROJECT_ROOT>/node_modules/mini-css-extract-plugin/dist/loader.js",
          {
            "loader": "css-loader",
            "options": {
              "importLoaders": 1,
              "sourceMap": true,
              "url": false,
            },
          },
          {
            "loader": "postcss-loader",
            "options": {
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "test": /\\\\\\.s\\(c\\|a\\)ss\\$/,
        "use": [
          "<PROJECT_ROOT>/node_modules/mini-css-extract-plugin/dist/loader.js",
          {
            "loader": "css-loader",
            "options": {
              "importLoaders": 2,
              "sourceMap": true,
              "url": {
                "filter": [Function],
              },
            },
          },
          {
            "loader": "postcss-loader",
            "options": {
              "sourceMap": true,
            },
          },
          {
            "loader": "sass-loader",
            "options": {
              "implementation": {
                "AsyncCompiler": [Function],
                "CalculationInterpolation": [Function],
                "CalculationOperation": [Function],
                "Compiler": [Function],
                "Exception": [Function],
                "FALSE": SassBoolean0 {
                  "value": false,
                },
                "Logger": {
                  "silent": {
                    "debug": [Function],
                    "warn": [Function],
                  },
                },
                "NULL": _SassNull0 {},
                "NodePackageImporter": [Function],
                "SassArgumentList": [Function],
                "SassBoolean": [Function],
                "SassCalculation": [Function],
                "SassColor": [Function],
                "SassFunction": [Function],
                "SassList": [Function],
                "SassMap": [Function],
                "SassMixin": [Function],
                "SassNumber": [Function],
                "SassString": [Function],
                "TRUE": SassBoolean0 {
                  "value": true,
                },
                "Value": [Function],
                "Version": [Function],
                "cli_pkg_main_0_": [Function],
                "compile": [Function],
                "compileAsync": [Function],
                "compileString": [Function],
                "compileStringAsync": [Function],
                "deprecations": {
                  "abs-percent": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 65,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "description": "Passing percentages to the Sass abs() function.",
                    "id": "abs-percent",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "bogus-combinators": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 54,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "description": "Leading, trailing, and repeated combinators.",
                    "id": "bogus-combinators",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "call-string": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 0,
                      "minor": 0,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "description": "Passing a string directly to meta.call().",
                    "id": "call-string",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "color-4-api": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 79,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "description": "Certain uses of built-in sass:color functions.",
                    "id": "color-4-api",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "color-functions": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 79,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "description": "Using global color functions instead of sass:color.",
                    "id": "color-functions",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "color-module-compat": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 23,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "description": "Using color module functions in place of plain CSS functions.",
                    "id": "color-module-compat",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "compile-string-relative-url": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 88,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "description": "Passing a relative url to compileString().",
                    "id": "compile-string-relative-url",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "css-function-mixin": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 76,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "description": "Function and mixin names beginning with --.",
                    "id": "css-function-mixin",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "duplicate-var-flags": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 62,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "description": "Using !default or !global multiple times for one variable.",
                    "id": "duplicate-var-flags",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "elseif": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 3,
                      "patch": 2,
                      "preRelease": [],
                    },
                    "description": "@elseif.",
                    "id": "elseif",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "feature-exists": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 78,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "description": "meta.feature-exists",
                    "id": "feature-exists",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "fs-importer-cwd": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 73,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "description": "Using the current working directory as an implicit load path.",
                    "id": "fs-importer-cwd",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "function-units": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 56,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "description": "Passing invalid units to built-in functions.",
                    "id": "function-units",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "global-builtin": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 80,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "description": "Global built-in functions that are available in sass: modules.",
                    "id": "global-builtin",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "if-function": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 95,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "description": "The Sass if($condition, $if-true, $if-false) function.",
                    "id": "if-function",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "import": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 80,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "description": "@import rules.",
                    "id": "import",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "legacy-js-api": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 79,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "description": "Legacy JS API.",
                    "id": "legacy-js-api",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "misplaced-rest": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 91,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "description": "A rest parameter before a positional or named parameter.",
                    "id": "misplaced-rest",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "mixed-decls": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 77,
                      "patch": 7,
                      "preRelease": [],
                    },
                    "description": "Declarations after or between nested rules.",
                    "id": "mixed-decls",
                    "obsoleteIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 92,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "status": "obsolete",
                  },
                  "moz-document": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 7,
                      "patch": 2,
                      "preRelease": [],
                    },
                    "description": "@-moz-document.",
                    "id": "moz-document",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "new-global": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 17,
                      "patch": 2,
                      "preRelease": [],
                    },
                    "description": "Declaring new variables with !global.",
                    "id": "new-global",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "null-alpha": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 62,
                      "patch": 3,
                      "preRelease": [],
                    },
                    "description": "Passing null as alpha in the JS API.",
                    "id": "null-alpha",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "relative-canonical": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 14,
                      "patch": 2,
                      "preRelease": [],
                    },
                    "description": "Imports using relative canonical URLs.",
                    "id": "relative-canonical",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "slash-div": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 33,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "description": "/ operator for division.",
                    "id": "slash-div",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "strict-unary": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 55,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "description": "Ambiguous + and - operators.",
                    "id": "strict-unary",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                  "type-function": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 86,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "description": "Functions named "type".",
                    "id": "type-function",
                    "obsoleteIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 92,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "status": "obsolete",
                  },
                  "user-authored": {
                    "deprecatedIn": null,
                    "description": null,
                    "id": "user-authored",
                    "obsoleteIn": null,
                    "status": "user",
                  },
                  "with-private": {
                    "deprecatedIn": {
                      "_version$_text": "<VERSION>",
                      "build": [],
                      "major": 1,
                      "minor": 92,
                      "patch": 0,
                      "preRelease": [],
                    },
                    "description": "Configuring private variables in @use, @forward, or load-css().",
                    "id": "with-private",
                    "obsoleteIn": null,
                    "status": "active",
                  },
                },
                "info": "dart-sass	<VERSION>	(Sass Compiler)	[Dart]
dart2js	<VERSION>	(Dart Compiler)	[Dart]",
                "initAsyncCompiler": [Function],
                "initCompiler": [Function],
                "load": [Function],
                "loadParserExports_": [Function],
                "render": [Function],
                "renderSync": [Function],
                "sassFalse": SassBoolean0 {
                  "value": false,
                },
                "sassNull": _SassNull0 {},
                "sassTrue": SassBoolean0 {
                  "value": true,
                },
                "types": {
                  "Boolean": [Function],
                  "Color": [Function],
                  "Error": [Function],
                  "List": [Function],
                  "Map": [Function],
                  "Null": [Function],
                  "Number": [Function],
                  "String": [Function],
                },
              },
              "sassOptions": {
                "fiber": false,
              },
            },
          },
        ],
      },
      {
        "test": /\\\\\\.\\(svg\\|png\\|jpg\\|gif\\)\\$/i,
        "type": "asset",
      },
    ],
  },
  "optimization": {
    "minimizer": [
      CssMinimizerPlugin {
        "options": {
          "exclude": undefined,
          "include": undefined,
          "minimizer": {
            "implementation": [Function],
            "options": {},
          },
          "parallel": true,
          "test": /\\\\\\.css\\(\\\\\\?\\.\\*\\)\\?\\$/i,
          "warningsFilter": [Function],
        },
      },
      TerserPlugin {
        "options": {
          "exclude": undefined,
          "extractComments": true,
          "include": undefined,
          "minimizer": {
            "implementation": [Function],
            "options": {
              "output": {
                "comments": false,
              },
            },
          },
          "parallel": true,
          "test": /\\\\\\.\\[cm\\]\\?js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
        },
      },
    ],
    "runtimeChunk": "single",
    "splitChunks": {
      "chunks": "all",
    },
  },
  "output": {
    "assetModuleFilename": "assets/[hash][ext][query]",
    "filename": "[name].[contenthash].js",
    "hashDigestLength": 8,
    "path": "<PROJECT_ROOT>/dist",
    "publicPath": "/dist/",
  },
  "plugins": [
    MiniCssExtractPlugin {
      "_sortedModulesCache": WeakMap {},
      "options": {
        "chunkFilename": "[name].[contenthash].css",
        "experimentalUseImportModule": undefined,
        "filename": "[name].[contenthash].css",
        "ignoreOrder": false,
        "runtime": true,
      },
      "runtimeOptions": {
        "attributes": undefined,
        "insert": undefined,
        "linkType": "text/css",
      },
    },
    ChunksWebpackPlugin {
      "addAssets": [Function],
      "manifest": {},
      "options": {
        "customFormatTags": false,
        "filename": "[name]-[type].html",
        "generateChunksFiles": false,
        "generateChunksManifest": true,
        "outputPath": null,
        "templateScript": "<script src="{{chunk}}"></script>",
        "templateStyle": "<link rel="stylesheet" href="{{chunk}}" />",
      },
    },
    CleanWebpackPlugin {
      "apply": [Function],
      "cleanAfterEveryBuildPatterns": [],
      "cleanOnceBeforeBuildPatterns": [
        "**/*",
      ],
      "cleanStaleWebpackAssets": true,
      "currentAssets": [],
      "dangerouslyAllowCleanPatternsOutsideProject": false,
      "dry": false,
      "handleDone": [Function],
      "handleInitial": [Function],
      "initialClean": false,
      "outputPath": "",
      "protectWebpackAssets": true,
      "removeFiles": [Function],
      "verbose": false,
    },
    WebpackRemoveEmptyScriptsPlugin {
      "apply": [Function],
      "enabled": true,
      "options": {
        "enabled": true,
        "extensions": /\\.\\(css\\|scss\\|sass\\|less\\|styl\\)\\(\\[\\?\\]\\.\\*\\)\\?\\$/,
        "ignore": [],
        "remove": /\\\\\\.\\(js\\|mjs\\)\\$/,
        "stage": 100,
        "verbose": true,
      },
      "outputPath": "",
      "trash": [],
      "verbose": true,
    },
  ],
  "resolve": {
    "extensions": [
      ".wasm",
      ".mjs",
      ".js",
      ".json",
      ".jsx",
    ],
    "plugins": [],
  },
  "stats": "errors-warnings",
}
`;
